--- a/abduction/index.html
+++ b/abduction/index.html
@@ -3,6 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Alien Abduction Order Form</title>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
+
 	<link href="css/forms.css" rel="stylesheet">
 </head>
 <body>
