--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -8,27 +8,27 @@
     <link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <div id="navbar">
-            <nav>
-                <ul>
-                    <li><a href=index.html>Home Page</a></li>
-                    <li><a href=about.html>About Me</a></li>
-                    <li><a href="projects.html">Projects</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+    <div class="wrapper">
+        <header>
+            <div id="navbar">
+                <nav>
+                    <ul>
+                        <li><a href=index.html>Home Page</a></li>
+                        <li><a href=about.html>About Me</a></li>
+                        <li><a href="projects.html">Projects</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
 
-    <section class="main">
-        <div class="intro-txt">
-            <h1>Hi, I'm Daniel</h1>
-            <h3>Frontend Developer (in training)</h3>
-            <p>Are you looking for a Frontend Developer for your next project? Let's talk.</p>
-        </div>
-        <img src="images/dev.png" class="dev-img">
-    </section>
-
-        
+        <section class="main">
+            <div class="intro-txt">
+                <h1>Hi, I'm Daniel</h1>
+                <h3>Frontend Developer (in training)</h3>
+                <p>Are you looking for a Frontend Developer for your next project? Let's talk.</p>
+            </div>
+            <img src="images/dev.png" class="dev-img">
+        </section>
+    </div>    
 </body>
 </html>
