update photo and alt text

--- a/Portfolio/about.html
+++ b/Portfolio/about.html
@@ -24,7 +24,7 @@
         <section class="about">
             <div class="me">
                 <h1>About me</h1>
-                <img src="images/Me.png" class="floatselfie">
+                <img src="images/me.png" alt="A photo of me" class="floatselfie">
                 <p>As long as I could remember I have always loved technology. After over a decade of working as a hair stylst I decided it was time to chase my dream and learn how to become a developer. When I am not spending time working on expanding my skill set you can find me playing video games, watching horror movies, or exploring beautiful NYC. </p>
                 
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pharetra sit amet aliquam id diam maecenas. Diam vulputate ut pharetra sit amet aliquam id diam maecenas. Sapien eget mi proin sed libero enim. Tellus id interdum velit laoreet. Enim lobortis scelerisque fermentum dui faucibus in ornare quam viverra. Orci nulla pellentesque dignissim enim sit. Et tortor consequat id porta nibh venenatis cras. Odio facilisis mauris sit amet massa vitae. Quis imperdiet massa tincidunt nunc pulvinar.</p>
