--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -27,7 +27,7 @@
                 <h3>Frontend Developer (in training)</h3>
                 <p>Are you looking for a Frontend Developer for your next project? Let's talk.</p>
             </div>
-            <img src="images/dev.png" class="dev-img">
+            <img src="images/dev.png" alt="vector drawing of a developer" class="dev-img">
         </section>
     </div>    
 </body>
