Added more to projects

--- a/portfolio/projects.html
+++ b/portfolio/projects.html
@@ -19,5 +19,19 @@
             </nav>
         </div>
     </header>
+    <section class="panels">
+        <a href="" class="proj1">
+            <h2>Alien Abduction</h2>
+            <p>This project explores how to create a simple HTML form to gather information from a varity of different user inputs. The form also utilizes basic CSS for styling.<br><br> Click to learn more.</p>
+        </a>
+        <a href="" class="proj2">
+            <h2>Project2</h2>
+            <p>This is some sample theskj;lfkasdl;kf as;lkdfj ashf;alksjdf;lka sdfhasd; kfahs;lkgha;sdlgka;ls dga;lkshdg ;lkashg;lkahsfg;lka hsf;lgkhas;lkf a;lksdadfapowihgaklsgba;lksdfgh;a sdfg;asd fasdjf asd kajsdfl a;sldaskdf kl;af;lk as;lkf j ;laksjd;flkjasd;lfj a;sldkf j;laksdjf;kasjdf;l asfk.<br><br> Click to learn more.</p>
+        </a>
+        <a href="" class="proj3">
+            <h2>Project3</h2>
+            <p>This is some sample theskj;lfkasdl;kf as;lkdfj ashf;alksjdf;lka sdfhasd; kfahs;lkgha;sdlgka;ls dga;lkshdg ;lkashg;lkahsfg;lka hsf;lgkhas;lkf a;lksdadfapowihgaklsgba;lksdfgh;a sdfg;asd fasdjf asd kajsdfl a;sldaskdf kl;af;lk as;lkf j ;laksjd;flkjasd;lfj a;sldkf j;laksdjf;kasjdf;l asfk.<br><br> Click to learn more.</p>
+        </a>
+    </section>
 </body>
 </html>
