--- a/portfolio/projects.html
+++ b/portfolio/projects.html
@@ -20,7 +20,7 @@
         </div>
     </header>
     <section class="panels">
-        <a href="" class="proj1">
+        <a href="https://ohhhmanitsdan.github.io/abduction/" class="proj1">
             <h2>Alien Abduction</h2>
             <p>This project explores how to create a simple HTML form to gather information from a varity of different user inputs. The form also utilizes basic CSS for styling.<br><br> Click to learn more.</p>
         </a>
