--- a/abduction/index.html
+++ b/abduction/index.html
@@ -11,6 +11,15 @@
 	<link href="css/forms.css" rel="stylesheet">
 </head>
 <body>
+	<div id="navbar">
+		<nav>
+			<ul>
+				<li><a href="https://ohhhmanitsdan.github.io/portfolio/index.html">Home Page</a></li>
+				<li><a href=about.html>About Me</a></li>
+				<li><a href="projects.html">Projects</a></li>
+			</ul>
+		</nav>
+	</div>
 	<div class="wrapper">
 		<section>
 			<h1>Alien Abduction Order Form</h1>
