--- a/portfolio/projects.html
+++ b/portfolio/projects.html
@@ -12,9 +12,9 @@
         <div id="navbar">
             <nav>
                 <ul>
-                    <li><a href=index.html>Home Page</a></li>
-                    <li><a href=about.html>About Me</a></li>
-                    <li><a href="projects.html">Projects</a></li>
+                    <li><a href="https://ohhhmanitsdan.github.io/portfolio/index.html">Home Page</a></li>
+                    <li><a href="https://ohhhmanitsdan.github.io/portfolio/about.html">About Me</a></li>
+                    <li><a href="https://ohhhmanitsdan.github.io/portfolio/projects.html">Projects</a></li>
                 </ul>
             </nav>
         </div>
@@ -22,7 +22,7 @@
     <section class="panels">
         <a href="https://ohhhmanitsdan.github.io/abduction/" class="proj1">
             <h2>Alien Abduction</h2>
-            <p>This project explores how to create a simple HTML form to gather information from a varity of different user inputs. The form also utilizes basic CSS for styling.<br><br> Click to learn more.</p>
+            <p>This project explores how to create a simple HTML form to gather information from a varity of different user inputs. The form also utilizes basic CSS for styling. The form is functional, feel free to book on of their expeirences, they are truly out of this world!<br><br> Click to learn more.</p>
         </a>
         <a href="" class="proj2">
             <h2>Project2</h2>
