--- a/abduction/index.html
+++ b/abduction/index.html
@@ -15,8 +15,8 @@
 		<nav>
 			<ul>
 				<li><a href="https://ohhhmanitsdan.github.io/portfolio/index.html">Home Page</a></li>
-				<li><a href=about.html>About Me</a></li>
-				<li><a href="projects.html">Projects</a></li>
+				<li><a href="https://ohhhmanitsdan.github.io/portfolio/about.html">About Me</a></li>
+				<li><a href="https://ohhhmanitsdan.github.io/portfolio/projects.html">Projects</a></li>
 			</ul>
 		</nav>
 	</div>
