--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -13,9 +13,9 @@
             <div id="navbar">
                 <nav>
                     <ul>
-                        <li><a href="https://ohhhmanitsdan.github.io/portfolio/index.html">Home Page</a></li>
-                        <li><a href="https://ohhhmanitsdan.github.io/portfolio/about.html">About Me</a></li>
-                        <li><a href="https://ohhhmanitsdan.github.io/portfolio/projects.html">Projects</a></li>
+                        <li><a href="./index.html">Home Page</a></li>
+                        <li><a href="./about.html">About Me</a></li>
+                        <li><a href="./projects.html">Projects</a></li>
                     </ul>
                 </nav>
             </div>
