--- a/portfolio/projects.html
+++ b/portfolio/projects.html
@@ -25,12 +25,12 @@
             <p>This project explores how to create a simple HTML form to gather information from a varity of different user inputs. The form also utilizes basic CSS for styling. The form is functional, feel free to book on of their expeirences, they are truly out of this world!<br><br> Click to learn more.</p>
         </a>
         <a href="" class="proj2">
-            <h2>Project2</h2>
-            <p>This is some sample theskj;lfkasdl;kf as;lkdfj ashf;alksjdf;lka sdfhasd; kfahs;lkgha;sdlgka;ls dga;lkshdg ;lkashg;lkahsfg;lka hsf;lgkhas;lkf a;lksdadfapowihgaklsgba;lksdfgh;a sdfg;asd fasdjf asd kajsdfl a;sldaskdf kl;af;lk as;lkf j ;laksjd;flkjasd;lfj a;sldkf j;laksdjf;kasjdf;l asfk.<br><br> Click to learn more.</p>
+            <h2>Calculator</h2>
+            <p>This project uses HTML, CSS, and Javascript to create a basic calculator. The styling of the calculator was done with only HTML and CSS and the functionality was coded using JS.</p>
         </a>
         <a href="" class="proj3">
-            <h2>Project3</h2>
-            <p>This is some sample theskj;lfkasdl;kf as;lkdfj ashf;alksjdf;lka sdfhasd; kfahs;lkgha;sdlgka;ls dga;lkshdg ;lkashg;lkahsfg;lka hsf;lgkhas;lkf a;lksdadfapowihgaklsgba;lksdfgh;a sdfg;asd fasdjf asd kajsdfl a;sldaskdf kl;af;lk as;lkf j ;laksjd;flkjasd;lfj a;sldkf j;laksdjf;kasjdf;l asfk.<br><br> Click to learn more.</p>
+            <h2>Feed a Mole game</h2>
+            <p>The Feed a Mole game was a fun project that combined the use of HTML, CSS, and JS to create a fun Whack a Mole style game. I hope you enjoy!</p>
         </a>
     </section>
 </body>
