--- a/portfolio/projects.html
+++ b/portfolio/projects.html
@@ -26,11 +26,11 @@
         </a>
         <a href="" class="proj2">
             <h2>Calculator</h2>
-            <p>This project uses HTML, CSS, and Javascript to create a basic calculator. The styling of the calculator was done with only HTML and CSS and the functionality was coded using JS.</p>
+            <p>This project uses HTML, CSS, and Javascript to create a basic calculator. The styling of the calculator was done with only HTML and CSS and the functionality was coded using JS.<br><br> Click to learn more.</p></p>
         </a>
         <a href="" class="proj3">
-            <h2>Feed a Mole game</h2>
-            <p>The Feed a Mole game was a fun project that combined the use of HTML, CSS, and JS to create a fun Whack a Mole style game. I hope you enjoy!</p>
+            <h2>Feed a Mole Game</h2>
+            <p>The Feed a Mole game was a fun project that combined the use of HTML, CSS, and JS to create a fun Whack a Mole style game. I hope you enjoy!<br><br> Click to learn more.</p></p>
         </a>
     </section>
 </body>
