--- a/abduction/index.html
+++ b/abduction/index.html
@@ -14,9 +14,9 @@
 	<div id="navbar">
 		<nav>
 			<ul>
-				<li><a href="./index.html">Home Page</a></li>
-				<li><a href="./about.html">About Me</a></li>
-				<li><a href="./projects.html">Projects</a></li>
+				<li><a href="../portfolio/index.html">Home Page</a></li>
+				<li><a href="../portfolio/about.html">About Me</a></li>
+				<li><a href="../portfolio/projects.html">Projects</a></li>
 			</ul>
 		</nav>
 	</div>
