--- a/abduction/index.html
+++ b/abduction/index.html
@@ -11,7 +11,7 @@
 	<link href="css/forms.css" rel="stylesheet">
 </head>
 <body>
-	<div id="navbar">
+	<!--<div id="navbar">
 		<nav>
 			<ul>
 				<li><a href="../portfolio/index.html">Home Page</a></li>
@@ -19,7 +19,7 @@
 				<li><a href="../portfolio/projects.html">Projects</a></li>
 			</ul>
 		</nav>
-	</div>
+	</div> -->
 	<div class="wrapper">
 		<section>
 			<h1>Alien Abduction Order Form</h1>
