Updated padding on projects page

--- a/portfolio/projects.html
+++ b/portfolio/projects.html
@@ -19,6 +19,7 @@
             </nav>
         </div>
     </header>
+    <div class="projects"><h1>Projects</h1></div>
     <section class="panels">
         <a href="../abduction/index.html" target="_blank" class="proj1">
             <h2>Alien Abduction</h2>
